--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -70,7 +70,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Sun Jan 19 09:40:04 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Tue Jan 28 10:00:10 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -668,7 +668,11 @@ instruments.</p>
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="eet-thanasisn-1">2025-01-19 09:13 EET [ThanasisN]</h2>
 <p>Most of the processes are done in Duckdb now.</p>
-<p>There are some secondary scripts to migrate.</p>
+<p>There are some secondary scripts to migrate.</p><h2
+id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
+<p>Cleaning of broadband and brewers windows at:</p>
+<p>09:41 - 09:43 LT</p>
+<p>07:41 - 07:43 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -743,7 +747,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 17 cleaning
+ 18 cleaning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
