--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -70,7 +70,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Tue Jan 28 10:00:10 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Feb  5 10:20:04 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -672,7 +672,11 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at:</p>
 <p>09:41 - 09:43 LT</p>
-<p>07:41 - 07:43 UTC</p>
+<p>07:41 - 07:43 UTC</p><h2 id="eet-thanasisn-3">2025-02-05 10:12 EET
+[ThanasisN]</h2>
+<p>Broadband, brewers, and Phaethon windows cleaning at</p>
+<p>10:09 - 10:11 LT</p>
+<p>08:09 - 08:11 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -747,7 +751,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 18 cleaning
+ 19 cleaning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
