--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Feb  5 10:20:04 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Mar 21 10:20:04 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -781,7 +781,12 @@ id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 [ThanasisN]</h2>
 <p>Broadband, brewers, and Phaethon windows cleaning at</p>
 <p>10:09 - 10:11 LT</p>
-<p>08:09 - 08:11 UTC</p>
+<p>08:09 - 08:11 UTC</p><h2 id="eet-thanasisn-4">2025-03-21 10:14 EET
+[ThanasisN]</h2>
+<p>Instruments windows cleaning at</p>
+<p>10:08 - 10:10 LT</p>
+<p>08:08 - 08:10 UTC</p>
+<p>A lot of brown dust</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -856,7 +861,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 19 cleaning
+ 20 cleaning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
