--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Mar 21 10:20:04 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Mon Apr  7 11:20:14 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -786,7 +786,11 @@ id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 <p>Instruments windows cleaning at</p>
 <p>10:08 - 10:10 LT</p>
 <p>08:08 - 08:10 UTC</p>
-<p>A lot of brown dust</p>
+<p>A lot of brown dust</p><h2 id="eest-thanasisn">2025-04-07 11:13 EEST
+[ThanasisN]</h2>
+<p>Broadband and spectral instruments windows cleaning at</p>
+<p>11:05 – 11:07 LT</p>
+<p>11:05 – 11:07 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -861,7 +865,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 20 cleaning
+ 21 cleaning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
