--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Mon Apr  7 11:20:14 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Thu Apr 24 11:40:04 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -790,7 +790,11 @@ id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 [ThanasisN]</h2>
 <p>Broadband and spectral instruments windows cleaning at</p>
 <p>11:05 – 11:07 LT</p>
-<p>11:05 – 11:07 UTC</p>
+<p>11:05 – 11:07 UTC</p><h2 id="eest-thanasisn-1">2025-04-24 11:32 EEST
+[ThanasisN]</h2>
+<p>Broadband and spectral instruments windows cleaning at</p>
+<p>11:28 – 11:30 LT</p>
+<p>08:28 – 08:30 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -865,7 +869,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 21 cleaning
+ 22 cleaning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
