--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Thu Apr 24 11:40:04 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Tue Apr 29 09:20:05 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -794,7 +794,11 @@ id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 [ThanasisN]</h2>
 <p>Broadband and spectral instruments windows cleaning at</p>
 <p>11:28 – 11:30 LT</p>
-<p>08:28 – 08:30 UTC</p>
+<p>08:28 – 08:30 UTC</p><h2 id="eest-thanasisn-2">2025-04-29 08:58 EEST
+[ThanasisN]</h2>
+<p>Tracker was not tracking at start of the day.</p>
+<p>Probably due to interference with the antivirus.</p>
+<p>Fixed after reboot.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -876,7 +880,7 @@ entries files</h2>
  12 data_loss
   2 down_time
   1 duckdb
-  4 error
+  5 error
   2 inclined
   4 leveling
  14 problem
@@ -886,7 +890,7 @@ entries files</h2>
   3 silica
   6 suspicious_data
   1 test
-  8 tracker
+  9 tracker
   1 works</code></pre>
 </body>
 </html>
