--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Tue Apr 29 09:20:05 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed May  7 10:00:08 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -798,7 +798,11 @@ id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 [ThanasisN]</h2>
 <p>Tracker was not tracking at start of the day.</p>
 <p>Probably due to interference with the antivirus.</p>
-<p>Fixed after reboot.</p>
+<p>Fixed after reboot.</p><h2 id="eest-thanasisn-3">2025-05-07 09:46
+EEST [ThanasisN]</h2>
+<p>Clean broadband and spectral instruments at</p>
+<p>09:38 – 09:40 LT</p>
+<p>06:38 – 06:40 LT</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -874,6 +878,7 @@ entries files</h2>
   1 ccd
  30 chp1
  22 cleaning
+  1 cleanning
   1 clear_sky
  10 cm21
   1 data_corruption_certain
