--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed May  7 10:00:08 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed May 28 11:20:04 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -771,38 +771,43 @@ instruments.</p>
 <h1 id="section-10">2025</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
+<h1 id="section-11">2025</h1>
 <h2 id="eet-thanasisn-1">2025-01-19 09:13 EET [ThanasisN]</h2>
 <p>Most of the processes are done in Duckdb now.</p>
-<p>There are some secondary scripts to migrate.</p><h2
-id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
+<p>There are some secondary scripts to migrate.</p>
+<h2 id="eet-thanasisn-2">2025-01-28 09:45 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at:</p>
 <p>09:41 - 09:43 LT</p>
-<p>07:41 - 07:43 UTC</p><h2 id="eet-thanasisn-3">2025-02-05 10:12 EET
-[ThanasisN]</h2>
+<p>07:41 - 07:43 UTC</p>
+<h2 id="eet-thanasisn-3">2025-02-05 10:12 EET [ThanasisN]</h2>
 <p>Broadband, brewers, and Phaethon windows cleaning at</p>
 <p>10:09 - 10:11 LT</p>
-<p>08:09 - 08:11 UTC</p><h2 id="eet-thanasisn-4">2025-03-21 10:14 EET
-[ThanasisN]</h2>
+<p>08:09 - 08:11 UTC</p>
+<h2 id="eet-thanasisn-4">2025-03-21 10:14 EET [ThanasisN]</h2>
 <p>Instruments windows cleaning at</p>
 <p>10:08 - 10:10 LT</p>
 <p>08:08 - 08:10 UTC</p>
-<p>A lot of brown dust</p><h2 id="eest-thanasisn">2025-04-07 11:13 EEST
-[ThanasisN]</h2>
+<p>A lot of brown dust</p>
+<h2 id="eest-thanasisn">2025-04-07 11:13 EEST [ThanasisN]</h2>
 <p>Broadband and spectral instruments windows cleaning at</p>
 <p>11:05 – 11:07 LT</p>
-<p>11:05 – 11:07 UTC</p><h2 id="eest-thanasisn-1">2025-04-24 11:32 EEST
-[ThanasisN]</h2>
+<p>11:05 – 11:07 UTC</p>
+<h2 id="eest-thanasisn-1">2025-04-24 11:32 EEST [ThanasisN]</h2>
 <p>Broadband and spectral instruments windows cleaning at</p>
 <p>11:28 – 11:30 LT</p>
-<p>08:28 – 08:30 UTC</p><h2 id="eest-thanasisn-2">2025-04-29 08:58 EEST
-[ThanasisN]</h2>
+<p>08:28 – 08:30 UTC</p>
+<h2 id="eest-thanasisn-2">2025-04-29 08:58 EEST [ThanasisN]</h2>
 <p>Tracker was not tracking at start of the day.</p>
 <p>Probably due to interference with the antivirus.</p>
-<p>Fixed after reboot.</p><h2 id="eest-thanasisn-3">2025-05-07 09:46
-EEST [ThanasisN]</h2>
+<p>Fixed after reboot.</p>
+<h2 id="eest-thanasisn-3">2025-05-07 09:46 EEST [ThanasisN]</h2>
 <p>Clean broadband and spectral instruments at</p>
 <p>09:38 – 09:40 LT</p>
 <p>06:38 – 06:40 LT</p>
+<h2 id="eest-thanasisn-4">2025-05-28 11:06 EEST [ThanasisN]</h2>
+<p>Instruments windows cleaning at</p>
+<p>10:45 – 10:48 LT</p>
+<p>07:45 – 07:48 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -877,7 +882,7 @@ entries files</h2>
   5 broadband
   1 ccd
  30 chp1
- 22 cleaning
+ 23 cleaning
   1 cleanning
   1 clear_sky
  10 cm21
