--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed May 28 11:20:04 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jun 20 09:40:04 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -808,6 +808,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Instruments windows cleaning at</p>
 <p>10:45 – 10:48 LT</p>
 <p>07:45 – 07:48 UTC</p>
+<h2 id="eest-thanasisn-5">2025-06-20 09:34 EEST [ThanasisN]</h2>
+<p>Instruments windows cleaning at</p>
+<p>09:06 – 09:08 LT</p>
+<p>06:06 – 06:08 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
