--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jun 20 09:40:04 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Jul  9 11:40:04 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -812,6 +812,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Instruments windows cleaning at</p>
 <p>09:06 – 09:08 LT</p>
 <p>06:06 – 06:08 UTC</p>
+<h2 id="eest-thanasisn-6">2025-07-09 11:35 EEST [ThanasisN]</h2>
+<p>Instruments windows cleaned at</p>
+<p>11:25 – 11:28 LT</p>
+<p>08:25 – 08:28 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -883,10 +887,10 @@ entries files</h2>
 <pre><code>  1 CSid
   1 INCcm21
   1 brewers
-  5 broadband
+  6 broadband
   1 ccd
  30 chp1
- 23 cleaning
+ 24 cleaning
   1 cleanning
   1 clear_sky
  10 cm21
