--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -175,7 +175,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Jul  9 11:40:04 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Sep  5 10:20:09 EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -816,6 +816,11 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Instruments windows cleaned at</p>
 <p>11:25 – 11:28 LT</p>
 <p>08:25 – 08:28 UTC</p>
+<h2 id="eest-thanasisn-7">2025-09-05 10:01 EEST [ThanasisN]</h2>
+<p>Instruments cleaning at</p>
+<p>09:53 – 09:56 LT</p>
+<p>06:53 – 06:56 UTC</p>
+<p>Some instruments were very dirty</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -887,10 +892,10 @@ entries files</h2>
 <pre><code>  1 CSid
   1 INCcm21
   1 brewers
-  6 broadband
+  7 broadband
   1 ccd
  30 chp1
- 24 cleaning
+ 25 cleaning
   1 cleanning
   1 clear_sky
  10 cm21
