--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -8,9 +8,6 @@
   <title>Broad Band Instruments Journal</title>
   <style>
     html {
-      line-height: 1.5;
-      font-family: Georgia, serif;
-      font-size: 20px;
       color: #1a1a1a;
       background-color: #fdfdfd;
     }
@@ -29,13 +26,16 @@
     @media (max-width: 600px) {
       body {
         font-size: 0.9em;
-        padding: 1em;
+        padding: 12px;
       }
       h1 {
         font-size: 1.8em;
       }
     }
     @media print {
+      html {
+        background-color: white;
+      }
       body {
         background-color: transparent;
         color: black;
@@ -59,6 +59,10 @@
       color: #1a1a1a;
     }
     img {
+      max-width: 100%;
+    }
+    svg {
+      height: auto;
       max-width: 100%;
     }
     h1, h2, h3, h4, h5, h6 {
@@ -85,9 +89,10 @@
       color: #606060;
     }
     code {
-      font-family: Menlo, Monaco, 'Lucida Console', Consolas, monospace;
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
       font-size: 85%;
       margin: 0;
+      hyphens: manual;
     }
     pre {
       margin: 1em 0;
@@ -149,10 +154,18 @@
     }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
   </style>
   
   <style>
@@ -175,7 +188,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Sep  5 10:20:09 EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Sep 19 12:17:09 PM EEST 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -821,6 +834,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>09:53 – 09:56 LT</p>
 <p>06:53 – 06:56 UTC</p>
 <p>Some instruments were very dirty</p>
+<h2 id="thanasisn-104">2025-09-19 09:58 +03:00 [ThanasisN]</h2>
+<p>Cleaning of instruments at</p>
+<p>09:44 – 09:46 LT</p>
+<p>06:44 – 06:46 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -889,21 +906,21 @@ entries files</h2>
   6 #tracker
  20 #tracker2</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
-<pre><code>  1 CSid
-  1 INCcm21
-  1 brewers
+<pre><code>  1 brewers
   7 broadband
   1 ccd
  30 chp1
- 25 cleaning
+ 26 cleaning
   1 cleanning
   1 clear_sky
  10 cm21
+  1 CSid
   1 data_corruption_certain
  12 data_loss
   2 down_time
   1 duckdb
   5 error
+  1 INCcm21
   2 inclined
   4 leveling
  14 problem
