--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -188,7 +188,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Sep 19 12:17:09 PM EEST 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Oct 31 12:00:38 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -838,6 +838,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Cleaning of instruments at</p>
 <p>09:44 – 09:46 LT</p>
 <p>06:44 – 06:46 UTC</p>
+<h2 id="eet-thanasisn-5">2025-10-31 11:50 EET [ThanasisN]</h2>
+<p>Instruments cleaned at</p>
+<p>11:44 – 11:46 LT</p>
+<p>09:44 – 09:46 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -906,21 +910,21 @@ entries files</h2>
   6 #tracker
  20 #tracker2</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
-<pre><code>  1 brewers
-  7 broadband
+<pre><code>  1 CSid
+  1 INCcm21
+  1 brewers
+  8 broadband
   1 ccd
  30 chp1
- 26 cleaning
+ 27 cleaning
   1 cleanning
   1 clear_sky
  10 cm21
-  1 CSid
   1 data_corruption_certain
  12 data_loss
   2 down_time
   1 duckdb
   5 error
-  1 INCcm21
   2 inclined
   4 leveling
  14 problem
