--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -188,7 +188,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Oct 31 12:00:38 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Dec 12 10:20:20 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -842,6 +842,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Instruments cleaned at</p>
 <p>11:44 – 11:46 LT</p>
 <p>09:44 – 09:46 UTC</p>
+<h2 id="eet-thanasisn-6">2025-12-12 10:02 EET [ThanasisN]</h2>
+<p>Broadband and spectral windows cleaned at</p>
+<p>09:48 – 09:50 LT</p>
+<p>07:48 – 07:50 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
